cif/org.eclipse.escet.cif.tests/tests/event_based/conversion_tests/comp_init.run.err
ERROR: Failed to compute synchronous product for CIF file "event_based/conversion_tests/comp_init.cif".
CAUSE: CIF synchronous product tool failed due to unsatisfied preconditions:

  ------------------------------------------------
  (1/2) Component has an initialization predicate.
  ------------------------------------------------
   * In group "g.h":
     - initial true;
               ^

  ----------------------------------------------------------------------------
  (2/2) Specification does not have at least 1 automaton (no automaton found).
  ----------------------------------------------------------------------------
